--- a/client/public/css/popup.css
+++ b/client/public/css/popup.css
@@ -32,6 +32,11 @@
     border-bottom: solid 0.5px #888;
 }
 
+.popup-body-fixed {
+    height: 360px;
+    border-bottom: solid 0.5px #888;
+}
+
 .popup-footer {
     margin-top: 10px;
 }
@@ -54,4 +59,14 @@
     color: #000;
     text-decoration: none;
     cursor: pointer;
+}
+
+.verifyText {
+    width: 50%;
+    float: left;
+}
+
+.verifyMap {
+    width: 50%;
+    float: right;
 }
